update git ignore to ignore parcel cache files

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ logs/
 *.log
 *.log.*
 
+# ignore cache files
+.frontend/.parcel-cache
+
 # ignore package-lock.json and yarn.lock
 package-lock.json
 yarn.lock
