update git ignore and update checklist progress

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ logs/
 *.log.*
 
 # ignore cache files
-.frontend/.parcel-cache
+frontend/.parcel-cache/
 
 # ignore package-lock.json and yarn.lock
 package-lock.json
